@@ -1,4 +1,5 @@
 3.2.7
+  - Data Browser will automatically reconnect if the connection is lost.
   - Minor bug fixes.
 
 3.2.6
